[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/cards/creature.png" type="Texture" id=2]
[ext_resource path="res://assets/cards/cardimages/owl.png" type="Texture" id=3]
[ext_resource path="res://ubuntu_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://ubuntu-df.tres" type="DynamicFont" id=5]

[node name="Card" type="Node2D"]

script = ExtResource( 1 )
CARD_IMAGE = null
CARD_TYPE = null
CARD_TEXT = "Card Text"
POWER = 0
HP = 0
CARD_ELEMENT = null
CARD_FACTION = null
CARD_CREATURE_TYPE = null

[node name="Background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CardImage" type="Sprite" parent="." index="1"]

position = Vector2( 0.157776, -59.3156 )
texture = ExtResource( 3 )

[node name="CardText" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -58.0
margin_top = 16.0
margin_right = 55.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Card Text"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="CardPower" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -72.0
margin_top = 89.0
margin_right = -52.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "5"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="CardHP" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 89.0
margin_right = 72.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.503906, 0.503906, 0.503906, 1 )
text = "8"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Pause", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]


